--- a/udemy practice/css/fish.css
+++ b/udemy practice/css/fish.css
@@ -1,3 +1,9 @@
 h1 {
     text-align: center;
+    font-weight: normal;
+    text-decoration: underline blue wavy;
+}
+
+p {
+    line-height: normal;
 }
