--- a/udemy practice/css/fish.css
+++ b/udemy practice/css/fish.css
@@ -2,6 +2,7 @@ h1 {
     text-align: center;
     font-weight: normal;
     text-decoration: underline blue wavy;
+    letter-spacing: 10px;
 }
 
 p {
