--- a/udemy practice/css/fish.css
+++ b/udemy practice/css/fish.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     font-weight: normal;
-    text-decoration: underline blue wavy;
+    text-decoration: underline rgb(0, 0, 0) wavy;
     letter-spacing: 10px;
     font-family: monospace;
 }
