--- a/udemy practice/css/test9.css
+++ b/udemy practice/css/test9.css
@@ -6,11 +6,16 @@ li {
     color: grey;
 }
 
-#clear {
-    color: white;
-    background-color: red;
+#clear:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
 }
 
 li a {
     color: grey;
+}
+
+button:hover {
+    background-color: green;
+    color: white;
 }
