--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -1,3 +1,11 @@
-body {
-    background-color: lightblue;
+div.header {
+    text-align: center;
+    padding: 5px;
+    background-color: #999dd6;
+}
+
+#title {
+    font-size: 2.5em;
+    color: white;
+    margin: 0;
 }
