--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -15,3 +15,11 @@ div.header {
     font-size: 23px;
     margin-bottom: 20px;
 }
+
+form {
+    background-color: #e6e6fa;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 600px;
+    margin: auto;
+}
