--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -23,3 +23,23 @@ form {
     max-width: 600px;
     margin: auto;
 }
+
+button {
+    background-color: #999dd6;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #7f7fc1;
+}
+
+label {
+    display: block;
+    margin-top: 15px;
+    font-size: 18px;
+}
