--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -38,8 +38,11 @@ button:hover {
     background-color: #7f7fc1;
 }
 
+.learn {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
 label {
-    display: block;
-    margin-top: 15px;
     font-size: 18px;
 }
