--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -1,3 +1,10 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #32345f;
+    margin: 0;
+    padding: 0;
+}
+
 div.header {
     text-align: center;
     padding: 5px;
@@ -14,6 +21,7 @@ div.header {
     text-align: center;
     font-size: 23px;
     margin-bottom: 20px;
+    color: white;
 }
 
 form {
@@ -25,7 +33,7 @@ form {
 }
 
 button {
-    background-color: #999dd6;
+    background-color: #535783;
     color: white;
     border: none;
     padding: 10px 20px;
