--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -22,6 +22,7 @@ div.header {
     font-size: 23px;
     margin-bottom: 20px;
     color: white;
+
 }
 
 form {
@@ -30,6 +31,7 @@ form {
     border-radius: 5px;
     max-width: 600px;
     margin: auto;
+    text-align: left;
 }
 
 button {
