--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -43,6 +43,11 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+
+}
+
+button:opacity {
+    opacity: 100%;
 }
 
 button:hover {
@@ -56,4 +61,9 @@ button:hover {
 
 label {
     font-size: 18px;
+}
+
+#survey-form {
+    margin-top: 20px;
+    opacity: 100%;
 }
