--- a/freecodecamp/css/survey.css
+++ b/freecodecamp/css/survey.css
@@ -48,7 +48,8 @@ button {
     font-size: 16px;
 }
 
-/* .img {
+/* 
+.img {
     width: 50%;
     height: 200px;
     background-image: url("C:\\Users\\91919\\OneDrive\\Desktop\\html-css\\frontend-mini-projects\\landing-page\\images\\laptop.jpg");
