--- a/css/hover.css
+++ b/css/hover.css
@@ -13,7 +13,7 @@ button {
     border: 2px solid #ffa260;
     padding: 1em 2em;
     font-size: 1em;
-    transition: all 0.3s ease;
+    transition: all 0.25s ease;
 }
 
 
@@ -21,4 +21,5 @@ button:hover {
     border-color: #f1ff5c;
     box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
     transform: translateY(-0.2em);
+    cursor: pointer;
 }
