--- a/css/hover.css
+++ b/css/hover.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'roboto', sans-serif;
+    font-family: Playwrite NZ Basic, cursive;
     display: flex;
     justify-content: center;
     align-items: center;
