--- a/css/site.css
+++ b/css/site.css
@@ -2,3 +2,11 @@ img {
     width: 30%;
     margin: 1.66666%;
 }
+
+nav {
+    padding-top: 10px;
+    width: 30%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+    margin-left: 1.66666%;
+}
