--- a/css/site.css
+++ b/css/site.css
@@ -4,9 +4,10 @@ img {
 }
 
 nav {
+    text-transform: uppercase;
     padding-top: 10px;
     width: 30%;
     padding-bottom: 10px;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid #f1f1f1;
     margin-left: 1.66666%;
 }
