--- a/css/site.css
+++ b/css/site.css
@@ -4,9 +4,12 @@ img {
 }
 
 nav {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 1.5em;
     text-transform: uppercase;
     width: 30%;
     border-bottom: 2px solid #f1f1f1;
     margin-left: 1.66666%;
-    padding: 15px 0;
+    padding: 1.2em 0;
 }
