--- a/css/flex.css
+++ b/css/flex.css
@@ -14,6 +14,7 @@ h1 {
     border: 5px solid #003949;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .container div {
