--- a/css/flex.css
+++ b/css/flex.css
@@ -13,8 +13,9 @@ h1 {
     margin: 0 auto;
     border: 5px solid #003949;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: reverse;
 }
 
 .container div {
