--- a/css/flex.css
+++ b/css/flex.css
@@ -13,12 +13,12 @@ h1 {
     margin: 0 auto;
     border: 5px solid #003949;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
-    flex-wrap: reverse;
+    flex-wrap: wrap;
 }
 
 .container div {
-    width: 200px;
+    width: 600px;
     height: 200px;
 }
