--- a/css/flex.css
+++ b/css/flex.css
@@ -14,11 +14,11 @@ h1 {
     border: 5px solid #003949;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .container div {
-    width: 600px;
+    width: 200px;
     height: 200px;
 }
