--- a/css/flex.css
+++ b/css/flex.css
@@ -15,10 +15,23 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .container div {
     width: 200px;
     height: 200px;
+}
+
+div:nth-of-type(3) {
+    align-self: flex-end;
+}
+
+div:nth-of-type(2) {
+    align-self: center;
+}
+
+div:nth-of-type(4) {
+    align-self: center;
 }
