--- a/css/flex.css
+++ b/css/flex.css
@@ -8,7 +8,7 @@ h1 {
 
 .container {
     background-color: #003949;
-    height: 500px;
+    /* height: 500px; */
     width: 90%;
     margin: 0 auto;
     border: 5px solid #003949;
@@ -22,16 +22,6 @@ h1 {
 .container div {
     width: 200px;
     height: 200px;
-}
-
-div:nth-of-type(3) {
-    align-self: flex-end;
-}
-
-div:nth-of-type(2) {
-    align-self: center;
-}
-
-div:nth-of-type(4) {
-    align-self: center;
+    flex-basis: 200px;
+    flex-grow: 1;
 }
