--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: antiquewhite;
 }
 
 h1 {
@@ -16,4 +17,11 @@ li {
     display: inline;
     padding: 0;
     margin: 0;
+}
+
+@media (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
+
 }
