--- a/css/media.css
+++ b/css/media.css
@@ -19,9 +19,14 @@ li {
     margin: 0;
 }
 
-@media (max-width: 600px) {
-    body {
-        background-color: lightblue;
+@media (max-width: 768px) {
+    h1 {
+        font-size: 4em;
     }
+}
 
+@media (max-width: 576px) {
+    h1 {
+        font-size: 3em;
+    }
 }
