--- a/css/media.css
+++ b/css/media.css
@@ -9,14 +9,23 @@ h1 {
 }
 
 nav {
+    display: flex;
     font-size: 1.5em;
     display: flex;
     justify-content: space-between;
 }
 
+ul {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+}
+
 ul,
 li {
-    display: inline;
+    list-style: none;
+    /* display: inline; */
     padding: 0;
     margin: 0;
 }
@@ -24,6 +33,10 @@ li {
 @media (max-width: 768px) {
     h1 {
         font-size: 4em;
+    }
+
+    nav {
+        flex-direction: column;
     }
 }
 
