--- a/css/media.css
+++ b/css/media.css
@@ -25,7 +25,7 @@ ul {
 ul,
 li {
     list-style: none;
-    /* display: inline; */
+    display: inline;
     padding: 0;
     margin: 0;
 }
@@ -37,6 +37,11 @@ li {
 
     nav {
         flex-direction: column;
+    }
+
+    nav ul {
+        flex-direction: column;
+
     }
 }
 
