--- a/css/media.css
+++ b/css/media.css
@@ -25,7 +25,6 @@ ul {
 ul,
 li {
     list-style: none;
-    display: inline;
     padding: 0;
     margin: 0;
 }
@@ -37,10 +36,12 @@ li {
 
     nav {
         flex-direction: column;
+        align-items: center;
     }
 
     nav ul {
         flex-direction: column;
+        align-items: center;
 
     }
 }
