--- a/css/media.css
+++ b/css/media.css
@@ -16,7 +16,7 @@ nav {
 }
 
 ul {
-    border: 1px solid black;
+
     display: flex;
     justify-content: space-evenly;
     width: 50%;
@@ -34,15 +34,10 @@ li {
         font-size: 4em;
     }
 
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-
+    nav,
     nav ul {
         flex-direction: column;
         align-items: center;
-
     }
 }
 
